# br-cpf-cnpj

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
br_cpf_cnpj/: __init__.py  __version__.py  generator.py  validators.py
py_cpf_cnpj/: __init__.py  __version__.py  calculation.py  normalize.py
tests/: test_calculation.py  test_generator.py  test_normalize.py  test_validators.py
